# alfred

./: .gitignore  CMakeLists.txt  README.md  route
example/pokedex/: CMakeLists.txt  pokedex.c  pokemon.c  pokemon.h
include/: alfred.h
include/alfred/: context.h  parser.h  request.h  response.h  route.h  server.h
src/: route.c  server.c
